tests/bad_programs/type_errors/undecl_double_ass.notc
int main() {
    d = 54.3;
    return 0;
}
